envoy-front.yaml
static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: backend
              domains:
              - "app.testbox.vm"
              routes:
              - match:
                  prefix: "/"
                redirect:
                  path_redirect: "/"
                  https_redirect: true
          http_filters:
          - name: envoy.router
            config: {}
  - name: listener_https
    address:
      socket_address: { address: 0.0.0.0, port_value: 8443 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "app.testbox.vm"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: apis
          http_filters:
          - name: envoy.router
            config: {}
      tls_context:
        require_client_certificate: true
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: /etc/certs/ca.crt
          tls_certificates:
          - certificate_chain:
              filename: /etc/certs/app.testbox.vm.crt
            private_key:
              filename: /etc/certs/app.testbox.vm.key
  clusters:
  - name: apis
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: flaskapp
        port_value: 8080
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
